# nitrogen-py

./: .gitignore  CONCEPTS.md  Makefile  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
examples/: excel_sample.py  google_sheets_sample.py  sqlite_sample.py
modules/: Cargo.toml
modules/ntcore/: Cargo.toml  build.rs  pyproject.toml
modules/ntcore/src/: column.rs  formula.rs  lib.rs  record.rs  registry.rs  relationship.rs  sheet.rs  value.rs  workbook.rs
modules/ntcore/src/expressions/: mod.rs  reference.rs
modules/ntcore/src/graph/: mod.rs
src/nitrogen/backends/: __init__.py  base.py
src/nitrogen/backends/excel/: backend.py  compiler.py
src/nitrogen/backends/google/: backend.py  compiler.py
src/nitrogen/core/: __init__.py  column.py  formula.py  record.py  registry.py  relationship.py  sheet.py  workbook.py
src/nitrogen/core/expressions/: arithmethic.py  base.py  references.py
src/nitrogen/core/graph/: dependency.py  exceptions.py  node.py
src/nitrogen/engine/: __init__.py  compiler.py  contexts.py  diff.py  plan.py  query.py  source.py  workbook.py
src/nitrogen/engine/compilers/: excel.py  google.py  sqlalchemy.py
src/nitrogen/engine/sources/: excel.py  google.py  sqlite.py
src/nitrogen/engine/sync/: __init__.py  abstract.py  postgres.py  sqlite.py
tests/: test_nitrogen_backends.py  test_nitrogen_core.py  test_nitrogen_sycnengine_datasources.py
